[metadata]
name = ptlflow
version = attr: ptlflow.__version__
author = Henrique Morimitsu
author_email = henriquem87@gmail.com
description = PyTorch Lightning Optical Flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmorimitsu/ptlflow
project_urls =
    Documentation = https://ptlflow.readthedocs.io
    Source Code = https://github.com/hmorimitsu/ptlflow
keywords = torch, pytorch lightning, optical flow, models
license = Apache 2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.md, *.txt, *LICENSE, *.ttf
